assets/css/public/lbcc.css
/* CSS Document for SubjectsPlus, public display (i.e., subjects/ folder ) */

/* reset - blueprint mod */
* {padding: 0; margin: 0;}

html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li,
fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {margin: 0;padding: 0;border: 0;font-weight: inherit;font-style: inherit;font-size: 100%;font-family: inherit;vertical-align: baseline;}

/* Tables still need 'cellspacing="0"' in the markup. */
table { border-collapse: separate; border-spacing: 0; }
caption, th, td { text-align: left; font-weight: normal; }
table, td, th { vertical-align:top; }
/* Remove annoying border on linked images. */
a img { border: none; }

p {margin-bottom: 10px;}

/* no's*/
.no-border{border: 0 !important}
.no-margin{margin: 0 !important}
.no-bg{background: none !important}
.no-pad-left{padding-left: 0 !important}
.no-pad-right{padding-right: 0 !important}

/* jQuery UI overrides */
.ui-widget {
       font-family: sans-serif;
}


body,
.pure-g [class *= "pure-u"],
.pure-g-r [class *= "pure-u"] {
    font-family: 'Lato', 'Helvetica', sans-serif;
    letter-spacing: .1px;
}

body {
    margin: 0 auto;
    padding: 0;
    
    font-size: 0.8125em;
    text-align: left;
    line-height: 1.5em;
    color: #494949;
    background: #FFF;
}

html,
body {
    height: 100%;
    /* The html and body elements cannot have any padding or margin. */
}


a,
a:link  {
    color: #005b94;
}

a:visited, a:hover {
    color: #873D5A;
}

h2 {
  
    font-weight: 300;
    font-size: 38px;
    line-height: 45px;
}

h3 {
    
    font-size: 1.1em;
    letter-spacing: 1px;
    color: #6F6F6F;
}

em {font-style: italic;}


img {
    height: auto !important;
    max-width: 100%;
}

img.main_logo {
    height: 3em !important;
}

.clearboth {
    clear:both;
}

.clear-both-left {
    clear:both;
    float:left;
}


/* Wrapper for page content to push down footer */
#wrap {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    /* Negative indent footer by it's height */
    margin: 0 auto -45px;
}

#push {
        height: 45px;
    }

.main_logo { }

/* Header area */

#header {
    background: #fff;
    height: 75px;
}

#header_inner_wrap {
    text-align: left;
    padding: 0;
    width: 100%;
    background-color: #transparent;
}



/* Main content areas */

.wrapper-full {
    margin: 0 auto;
}

#main-content { /* changed from #wrap to main-content per RG */
    position: relative;
    text-align: left;    
    background-color: transparent;
    width: 100%;
}



#leftcol {
    clear: both; float: left; width: 30%; margin-left: 2%;
}

#maincol {
    float: left; width: 30%; margin-left: 3%;
}

#rightcol {
    float: left; width: 30%; margin-left: 3%;
}

#rightcol p,#rightcol ul,#rightcol dl {
    margin: 4px 10px 4px 10px;
    padding: 0;
    list-style: none;
}

#rightcol ul li {
    margin: 0 0 .5em 0;
    padding: 0 0 0 18px;
    line-height: 1.4em;
    background: url("../images/icons/required.png") no-repeat 0 0px;
}

#rightcol h3 {
    font: 1.2em sans-serif;
    font-weight: 700;
    margin: 10px 0 12px 0;
    padding: 5px 10px 0px;
    border: none;
    color: #000;
}

#rightcol h4 {
    font-size: 92%;
    font-weight: normal;
    margin: 0;
}


/* Footer */

#footer {
    margin-top: 80px;
    padding: 10px 0 0px 0;
    color: #fff;
    background: #005b94;
    background-image: url('../../images/public/dark_blue_tree.png');
    background-repeat: no-repeat;
    background-position: right;
    min-height: 300px;
}

.center {
    margin: 0;
    line-height: 1.4em;
    text-align: center;
}

#footer a, #footer a:link, #footer a:visited {
    color: #888;
}

#footer a:hover {
    color: #ccc;
}

/* Guide Tools */


#sp_search {
    margin-left: 1em;
    margin-right: 2px;
}


/* This is for the pluslets */

.pluslet_simple {
    position: relative;
    clear: both;
    cursor: auto;
    z-index: 1;
    overflow: visible;
    border: 1px solid #ccc;
    background-color: #fff;
    border-radius: 5px;    
     padding: .5em 1em;
    margin: 1em;
}

.pluslet_simple ul, ol {
    margin: 1em;
}

#maincontent .pluslet_simple h2 {
    border: none;
    color: #333;
    background-color: #fff;
    border-bottom: 1px solid #efefef;
}
.no_overflow {
    overflow:auto;
}

.pluslet {
    position: relative;
    clear: both;
    background: #fff; 
    border: 1px solid #000;
    padding: 0;
    font-size: 10pt;   
    border-radius: 5px;
    margin: 1em 1em;    
    border-radius: 6px;
}

.pluslet ul {
    margin-left: 2em;
}

.pluslet li {
    display: list-item;
    margin-left: 5px;
    margin-bottom: 10px;
}

.pluslet li a {
    background-color: transparent;
    border: medium none;
    box-shadow: none;
    color: #40659b;
    font-size: 1em;
    margin: 0;
    padding: 0;
}

.pluslet li a:hover {
    color: #cc6666;
    text-decoration: underline;
}
#tabs .pluslet ul {
    margin-bottom: 0.5em;
}

.pluslet_body {
    background-color: #fff;
    padding: .5em;
    margin: .5em;
    text-align: left;
    overflow: auto;
}

.pluslet_body .description {
   padding: 10px 0;
}


.titlebar {
    color: #FFF;
    position: relative;
    padding: 0;
    margin: 0;
    width: 100%;    
    background-color: #005b94;

}

.titlebar_text {
    font: 1.15em sans-serif;
    font-weight: 700;
    margin-bottom: 5px;
    margin-top: 0px;
    padding: 10px;
    border:  none;
    background-color: transparent;
    -webkit-border-top-left-radius: 6px;
    -webkit-border-top-right-radius: 6px;
    -moz-border-radius-topleft: 6px;
    -moz-border-radius-topright: 6px;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;

}

.titlebar_options {
    display: none;
}


/* Tabs */

#tabs {    
    background-color: transparent;
    width: 100%;
    float: left;
    clear: both;
    margin-top: 45px;
}
/* ... */

